# ispd-exa-gui

./: .clang-format  .gitignore  CMakeLists.txt  Grid_test.pro  README.md  build.sh  ispd-exa-gui.pro  ispd-exa-gui.qrc  packCircles.h  packcircles.c  packcircles.cpp  packcircles.h  results.json  run.sh
forms/: adduser.ui  addworkloadwindow.ui  linkconfigurationwindow.ui  machineconfiguration.ui  machineconfigurationwindow.ui  machineconfigurationwindow.ui.autosave  machinesetconfigurationwindow.ui  mainwindow.ui  run_simulation_window.ui  scatterplot.cpp  scatterplot.h  scatterplot.ui  schedulergenerator.ui  settingswindow.ui  simulation.ui  switchconfigurationwindow.ui  userwindow.ui  workloads.ui
include/: gridview.h  link.h  mainwindow.h  schema.h  settingswindow.h  userwindow.h  workloads.h
include/components/: component.h  connectable.h  connectableset.h  connectablesetbuilder.h  connection.h  item.h  link.h  machine.h  machinebuilder.h  machineset.h  machinesetbuilder.h  schema.h  schemabuilder.h  switch.h  switchbuilder.h
include/components/cloner/: cloner.h  connectablecloner.h  linkcloner.h  machinecloner.h  schemacloner.h  switchcloner.h
include/components/conf/: connectablesetconfiguration.h  itemconfiguration.h  linkconfiguration.h  machineconfiguration.h  machinesetconfiguration.h  schemaconfiguration.h  switchconfiguration.h
include/context/: context.h  user.h  workload.h
include/drawingtable/: drawingtable.h  scene.h  view.h
include/icon/: icon.h  linkicon.h  machineicon.h  machineiconfactory.h  pixmapbuilder.h  pixmapicon.h  pixmapiconbuilder.h  pixmappair.h  schemaicon.h  seticonfactory.h  switchicon.h
include/item/: clustericon.h  icon.h  link.h  linkicon.cpp  linkicon.h  machine.h  machineicon.h  schemaicon.h
include/load/: linkload.h  machineload.h
include/utils/: iconPath.h  iconSize.h
include/window/: adduser.h  addworkloadwindow.h  cluster.h  linkconfigurationwindow.h  machineconfiguration.h  machineconfigurationwindow.h  machinesetconfigurationwindow.h  main.h  run_simulation_window.h  schedulergenerator.h  schemawindow.h  simulation.h  switchconfigurationwindow.h  users.h  workloads.h
include/window/drawingtable/: drawingtable.h  scene.h  view.h
src/: clustericon.cpp  clustericon.h  griditem.cpp  griditem.h  gridscene.cpp  gridscene.h  gridview.cpp  gridview.h  icon.cpp  icon.h  ispd-exa-gui.cpp  link.cpp  link.h  machineicon.cpp  machineicon.h  main.cpp  mainwindow.cpp  mainwindow.h  schema.cpp  settingswindow.cpp  settingswindow.h  userwindow.cpp  userwindow.h  workload.cpp  workloads.cpp  workloads.h
src/components/: connectableset.cpp  connectablesetbuilder.cpp  link.cpp  machine.cpp  machinebuilder.cpp  machineset.cpp  machinesetbuilder.cpp  schema.cpp  schemabuilder.cpp  switch.cpp  switchbuilder.cpp
src/components/cloner/: linkcloner.cpp  machinecloner.cpp  schemacloner.cpp  switchcloner.cpp
src/components/conf/: connectablesetconfiguration.cpp  linkconfiguration.cpp  machineconfiguration.cpp  machinesetconfiguration.cpp  schemaconfiguration.cpp  switchconfiguration.cpp
src/drawingtable/: drawingtable.cpp  scene.cpp  view.cpp
src/icon/: icon.cpp  linkicon.cpp  machineicon.cpp  machineiconfactory.cpp  pixmapicon.cpp  pixmapiconbuilder.cpp  schemaicon.cpp  seticonfactory.cpp  switchicon.cpp
src/item/: clustericon.cpp  icon.cpp  link.cpp  linkicon.cpp  machine.cpp  machineicon.cpp  schemaicon.cpp
src/load/: linkload.cpp  machineload.cpp
src/window/: adduser.cpp  addworkloadwindow.cpp  cluster.cpp  linkconfigurationwindow.cpp  machineconfiguration.cpp  machineconfigurationwindow.cpp  machinesetconfigurationwindow.cpp  main.cpp  qcustomplot.cpp  run_simulation_window.cpp  scatterplot.cpp  schedulergenerator.cpp  schemawindow.cpp  settings.cpp  simulation.cpp  switchconfigurationwindow.cpp  users.cpp  workloads.cpp
src/window/drawingtable/: drawingtable.cpp  scene.cpp  view.cpp
